--- a/.github/workflows/pyqgis-regression.yaml
+++ b/.github/workflows/pyqgis-regression.yaml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Change Brew Tap
-        run: brew tap https://github.com/tillhainbach/macos-pyqgis-regression-test
+        run: brew tap tillhainbach/qgis-casks
 
       - name: Install QGIS
-        run: brew install --cask Casks/qgis-ltr-3.16
+        run: brew install --cask qgis-ltr-3.16
       
       - name: Test PyQGIS
-        run: bash qgis_test_script.sh LTR-3.16
+        run: bash qgis_test_script.sh -LTR-3.16
