--- a/.github/workflows/pyqgis-regression.yaml
+++ b/.github/workflows/pyqgis-regression.yaml
@@ -11,7 +11,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Change Brew Tap
-        run: mv ./homebrew-qgis-cask `brew --repo`/Library/Taps/qgis-casks/homebrew-qgis-cask
+        run: |
+          mkdir -p `brew --repo`/Library/Taps/qgis-casks/
+          mv ./homebrew-qgis-cask `brew --repo`/Library/Taps/qgis-casks/homebrew-qgis-cask
 
       - name: Install QGIS
         run: brew install --cask qgis-ltr-3.16
